# chipmunk2d_physics_ffi

./: .gitignore  .metadata  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  ffigen.yaml  native_assets.yaml  pubspec.yaml
.github/workflows/: build-release.yml
assets/web/: chipmunk2d_physics_ffi.js  chipmunk2d_physics_ffi.wasm
example/: README.md  analysis_options.yaml  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/chipmunk/flutter/chipmunk2d_physics_ffi/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
hook/: build.dart  download_prebuilt.dart
lib/: chipmunk2d_physics_ffi.dart  chipmunk2d_physics_ffi_bindings_generated.dart
lib/src/: arbiter.dart  body.dart  body_type.dart  bounding_box.dart  chipmunk.dart  constraint.dart  moment.dart  query_info.dart  shape.dart  space.dart  vector.dart
lib/src/platform/: chipmunk_bindings.dart  chipmunk_bindings_native.dart  chipmunk_bindings_stub.dart  chipmunk_bindings_web.dart
src/: CMakeLists.txt  chipmunk2d_physics_ffi.c  chipmunk2d_physics_ffi.h
test/: arbiter_test.dart  body_test.dart  bounding_box_test.dart  chipmunk2d_physics_ffi_test.dart  constraint_test.dart  integration_test.dart  moment_test.dart  shape_test.dart  space_test.dart  vector_test.dart
tool/: download_chipmunk2d.dart
